# wgpu_exploration

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: camera.rs  imgui_state.rs  instance.rs  main.rs  model.rs  state.rs  texture.rs  vertex.rs
src/shaders/: shader.frag  shader.vert
