[package]
name = "wgpu_learning"
version = "0.1.0"
authors = ["Paul Cacheux <paulcacheux@gmail.com>"]
edition = "2018"


[dependencies]
winit = "0.24"
cgmath = { version = "0.18", features = ["swizzle"] }
wgpu = "0.7"
futures = "0.3"
log = "0.4"
env_logger = "0.8"
bytemuck = { version = "1.5", features = ["derive"] }
memoffset = "0.6"
once_cell = "1.5"
image = "0.23"

[build-dependencies]
shaderc = "0.7.1"
glob = "0.3.0"